--- a/analyze.html
+++ b/analyze.html
@@ -81,7 +81,7 @@
 
     <main class="max-w-[1200px] mx-auto px-4 py-12 mb-20">
 
-        <section class="text-center mb-16 mt-8 animate-fade-in-up">
+        <section class="text-center mb-16 mt-8">
             <h1 class="text-4xl md:text-6xl font-bold text-white mb-6 tracking-tight">
                 Çizgi Filmimizi <span class="text-accent">Satabilir Miyiz?</span>
             </h1>
