--- a/gizlilik-sozlesmesi.html
+++ b/gizlilik-sozlesmesi.html
@@ -116,9 +116,9 @@
       <h2>1. Veri Sorumlusu</h2>
       <p>6698 sayılı Kişisel Verilerin Korunması Kanunu (KVKK) uyarınca, kişisel verileriniz, veri sorumlusu olarak <strong>[Şirketinizin Tam Yasal Adı]</strong> ("ALBA Space") tarafından aşağıda açıklanan kapsamda işlenmektedir. Bu politika, KVKK kapsamındaki aydınlatma yükümlülüğümüzü yerine getirmek amacıyla hazırlanmıştır.</p>
       <ul>
-        <li><strong>Adres:</strong> [Şirketinizin Kayıtlı Adresi]</li>
-        <li><strong>E-posta:</strong> [İletişim E-posta Adresiniz]</li>
-        <li><strong>Telefon:</strong> [İletişim Telefon Numaranız]</li>
+        <li><strong>Adres:</strong> Çukurova Üniversitesi Teknokent No:B207 Sarıçam / ADANA</li>
+        <li><strong>E-posta:</strong> hello@albaspace.com.tr</li>
+        <li><strong>Telefon:</strong> +90 538 778 10 18</li>
       </ul>
 
       <h2>2. Kişisel Verilerin Toplanması, İşlenmesi ve Amaçları</h2>
@@ -184,8 +184,7 @@
           <li><strong>Performans/Analitik Çerezler:</strong> Siteyi nasıl kullandığınız hakkında istatistiksel bilgiler toplayarak hizmet kalitemizi artırmamıza yardımcı olur.</li>
           <li><strong>Reklam/Pazarlama Çerezleri:</strong> İlgi alanlarınıza yönelik profil oluşturmak ve size uygun reklamlar göstermek için kullanılır.</li>
         </ul>
-        <p>Kullandığımız tüm çerezler, amaçları, saklama süreleri ve ait oldukları taraflar hakkında ayrıntılı bilgi için lütfen <a href="[Çerez Politikası sayfanızın linki]">Çerez Politikamızı</a> inceleyiniz. Şeffaflık ilkesi gereği ayrı bir Çerez Politikası sayfası oluşturmanız şiddetle tavsiye edilir.</p>
-      </div>
+<p>Kullandığımız tüm çerezler, amaçları, saklama süreleri ve ait oldukları taraflar hakkında ayrıntılı bilgi için lütfen <a href="cerez-politikasi.html">Çerez Politikamızı</a> inceleyiniz.</p>      </div>
 
       <h2>6. Veri Güvenliği</h2>
       <p>ALBA Space, kişisel verilerinizin güvenliğini sağlamak için gerekli tüm teknik ve idari tedbirleri almaktadır. Verileriniz, yetkisiz erişim, kayıp ve kötüye kullanıma karşı korunmaktadır. Kredi kartı bilgileriniz, SSL sertifikası ile korunan güvenli ödeme altyapımız üzerinden doğrudan bankaya iletilir ve hiçbir şekilde sunucularımızda saklanmaz.</p>
