--- a/teslimat-ve-iade-sartlari.html
+++ b/teslimat-ve-iade-sartlari.html
@@ -108,21 +108,21 @@
 
       <h2>1. Teslimat Süreçleri</h2>
       <h3>Kargo Şirketi</h3>
-      <p>Siparişleriniz, anlaşmalı olduğumuz <strong>[Kargo Şirketi Adı, örn: Yurtiçi Kargo]</strong> aracılığıyla belirttiğiniz adrese güvenli bir şekilde teslim edilir.</p>
+      <p>Siparişleriniz, anlaşmalı olduğumuz <strong>Yurtiçi Kargo</strong> aracılığıyla belirttiğiniz adrese güvenli bir şekilde teslim edilir.</p>
       <h3>Teslimat Süresi</h3>
       <p>Siparişleriniz, ödemenin onaylanmasını takiben ortalama 1-3 iş günü içerisinde kargoya verilir. Kargo şirketinin yoğunluğuna ve teslimat adresinin konumuna bağlı olarak teslimat süresi 3-7 iş günü arasında değişiklik gösterebilir. Olası gecikmeler tarafınıza e-posta veya SMS yoluyla bildirilecektir.</p>
       <h3>Kargo Ücretleri</h3>
-      <p>Kargo ücreti, siparişinizin tutarına ve boyutuna göre hesaplanır ve ödeme ekranında açıkça belirtilir. <strong>[Örn: 500] TL</strong> ve üzeri alışverişlerinizde kargo ücretsizdir.</p>
+      <p>Kargo ücreti, siparişinizin tutarına ve boyutuna göre hesaplanır ve ödeme ekranında açıkça belirtilir. <strong>Örn: 500 TL</strong> ve üzeri alışverişlerinizde kargo ücretsizdir.</p>
       <h3>Sipariş Takibi</h3>
       <p>Siparişiniz kargoya verildiğinde, size gönderilecek olan e-postada ve/veya SMS'te yer alan kargo takip numarası ile gönderinizin durumunu ilgili kargo şirketinin web sitesinden takip edebilirsiniz.</p>
       <h3>Hasarlı Paket Durumu</h3>
-      <p>Kargonuzu teslim alırken pakette herhangi bir ezilme, yırtılma veya ıslaklık olup olmadığını kontrol ediniz. Hasarlı bir paket durumunda, kargo görevlisine "Hasar Tespit Tutanağı" tutturarak paketi teslim almayınız ve durumu derhal müşteri hizmetlerimize <strong>[e-posta adresi]</strong> adresi veya <strong>[telefon numarası]</strong> numarası üzerinden bildiriniz.</p>
+      <p>Kargonuzu teslim alırken pakette herhangi bir ezilme, yırtılma veya ıslaklık olup olmadığını kontrol ediniz. Hasarlı bir paket durumunda, kargo görevlisine "Hasar Tespit Tutanağı" tutturarak paketi teslim almayınız ve durumu derhal müşteri hizmetlerimize <strong>hello@albaspace.com.tr</strong> adresi veya <strong>+90 538 778 10 18</strong> numarası üzerinden bildiriniz.</p>
 
       <h2>2. İade Şartları ve Cayma Hakkı</h2>
       <p>6502 sayılı Tüketicinin Korunması Hakkında Kanun ve Mesafeli Sözleşmeler Yönetmeliği uyarınca, müşterilerimiz satın aldıkları ürünü teslimat tarihinden itibaren <strong>14 (on dört) gün</strong> içinde herhangi bir gerekçe göstermeksizin ve cezai şart ödemeksizin iade etme hakkına sahiptir.</p>
       <h3>Cayma Hakkının Kullanımı</h3>
       <ul>
-        <li>Cayma hakkınızı kullanmak için 14 günlük süre içinde <strong>[e-posta adresi]</strong> e-posta adresimiz veya <strong>[telefon numarası]</strong> numaralı telefonumuz üzerinden bize açık bir bildirimde bulunmanız gerekmektedir.</li>
+        <li>Cayma hakkınızı kullanmak için 14 günlük süre içinde <strong>hello@albaspace.com.tr</strong> e-posta adresimiz veya <strong>+90 538 778 10 18</strong> numaralı telefonumuz üzerinden bize açık bir bildirimde bulunmanız gerekmektedir.</li>
         <li>Bildiriminizin ardından, ürünü yasal süre olan <strong>10 (on) gün</strong> içinde tarafımıza göndermeniz gerekmektedir.</li>
       </ul>
       <h3>İade Koşulları (Cayma Hakkı)</h3>
@@ -132,7 +132,7 @@
       </ul>
       <h3>İade Kargo Ücreti (Cayma Hakkı)</h3>
       <ul>
-        <li>Yasal düzenlemeler uyarınca, cayma hakkının kullanılması durumunda iade masrafları genel kural olarak satıcıya aittir. Bu kapsamda, iadelerinizi anlaşmalı kargo şirketimiz olan <strong>[Kargo Şirketi Adı]</strong> aracılığıyla <strong>[İade Kodu]</strong> kodunu kullanarak gönderdiğiniz takdirde kargo ücreti tarafımızdan karşılanacaktır.</li>
+        <li>Yasal düzenlemeler uyarınca, cayma hakkının kullanılması durumunda iade masrafları genel kural olarak satıcıya aittir. Bu kapsamda, iadelerinizi anlaşmalı kargo şirketimiz olan <strong>Yurtiçi Kargo</strong> aracılığıyla <strong>[İade Kodu]</strong> kodunu kullanarak gönderdiğiniz takdirde kargo ücreti tarafımızdan karşılanacaktır.</li>
         <li>Tüketicinin, iade için anlaşmalı kargo şirketimiz dışında başka bir kargo şirketini tercih etmesi durumunda, kargo ücreti tüketici tarafından karşılanacaktır.</li>
         <li>Anlaşmalı kargo şirketimizin müşterinin bulunduğu yerde şubesinin olmaması halinde, ürünün tarafımızdan ek bir masraf alınmaksızın aldırılması sağlanacaktır.</li>
       </ul>
