--- a/teslimat-ve-iade-sartlari.html
+++ b/teslimat-ve-iade-sartlari.html
@@ -100,6 +100,17 @@
 </head>
 <body>
 
+  <style>
+    /* Отключаем все анимации и переходы на этой странице */
+    *, *::before, *::after {
+      animation: none !important;
+      transition: none !important;
+      scroll-behavior: auto !important;
+    }
+    /* На всякий случай отменяем трансформы */
+    [style*="transform"] { transform: none !important; }
+  </style>
+
   <div data-include="/header-tr.html"></div>
 
   <main class="page">
