--- a/atlas.html
+++ b/atlas.html
@@ -33,16 +33,25 @@
     }
 
     .atlas-inner {
-      background:radial-gradient(circle at top,rgba(56,189,248,0.18),transparent 55%);
-      padding:1px;
-      border-radius:26px;
-      box-shadow:0 28px 90px rgba(0,0,0,0.85);
+      padding:0;
+      border-radius:0;
+      box-shadow:none;
+      background:none;
     }
 
     .atlas-inner-core {
-      background:rgba(15,23,42,0.94);
-      border-radius:25px;
+      background:none;
+      border-radius:0;
       padding:22px 20px 30px;
+      border:none;
+      backdrop-filter:none;
+    }
+
+    .atlas-hero {
+      background:radial-gradient(circle at top,rgba(56,189,248,0.18),transparent 55%);
+      padding:22px 20px 30px;
+      border-radius:26px;
+      box-shadow:0 28px 90px rgba(0,0,0,0.85);
       border:1px solid rgba(148,163,184,0.5);
       backdrop-filter:blur(20px);
     }
@@ -164,6 +173,12 @@
     .atlas-hero {
       --reveal-delay: 0s !important;
       transition-duration: 0.3s !important;
+      background:radial-gradient(circle at top,rgba(56,189,248,0.18),transparent 55%);
+      padding:22px 20px 30px;
+      border-radius:26px;
+      box-shadow:0 28px 90px rgba(0,0,0,0.85);
+      border:1px solid rgba(148,163,184,0.5);
+      backdrop-filter:blur(20px);
     }
 
   
