--- a/teslimat-ve-iade-sartlari.html
+++ b/teslimat-ve-iade-sartlari.html
@@ -123,7 +123,7 @@
       <h3>Teslimat Süresi</h3>
       <p>Siparişleriniz, ödemenin onaylanmasını takiben ortalama 1-3 iş günü içerisinde kargoya verilir. Kargo şirketinin yoğunluğuna ve teslimat adresinin konumuna bağlı olarak teslimat süresi 3-7 iş günü arasında değişiklik gösterebilir. Olası gecikmeler tarafınıza e-posta veya SMS yoluyla bildirilecektir.</p>
       <h3>Kargo Ücretleri</h3>
-      <p>Kargo ücreti, siparişinizin tutarına ve boyutuna göre hesaplanır ve ödeme ekranında açıkça belirtilir. <strong>Örn: 500 TL</strong> ve üzeri alışverişlerinizde kargo ücretsizdir.</p>
+      <p>Kargo ücreti, siparişinizin tutarına ve boyutuna göre hesaplanır ve ödeme ekranında açıkça belirtilir. </p>
       <h3>Sipariş Takibi</h3>
       <p>Siparişiniz kargoya verildiğinde, size gönderilecek olan e-postada ve/veya SMS'te yer alan kargo takip numarası ile gönderinizin durumunu ilgili kargo şirketinin web sitesinden takip edebilirsiniz.</p>
       <h3>Hasarlı Paket Durumu</h3>
