--- a/atlas.html
+++ b/atlas.html
@@ -186,6 +186,16 @@
 </head>
 
 <body>
+  <style>
+    /* Отключаем все анимации и переходы на этой странице */
+    * { animation: none !important; transition: none !important; }
+    *::before, *::after { animation: none !important; transition: none !important; }
+    body { scroll-behavior: auto !important; }
+    .voice-bar { animation: none !important; }
+    .voice-stop-btn { animation: none !important; }
+    [style*="animation"] { animation: none !important; }
+    [style*="transition"] { transition: none !important; }
+  </style>
   <div data-include="/header-tr.html"></div>
 
   <div class="atlas-shell">
