--- a/eng/atlas.html
+++ b/eng/atlas.html
@@ -204,6 +204,16 @@ section.grid {
   <script src="/assets/js/menu-toggle.js" defer></script>
 </head>
 <body>
+  <style>
+    /* Отключаем все анимации и переходы на этой странице */
+    * { animation: none !important; transition: none !important; }
+    *::before, *::after { animation: none !important; transition: none !important; }
+    body { scroll-behavior: auto !important; }
+    .voice-bar { animation: none !important; }
+    .voice-stop-btn { animation: none !important; }
+    [style*="animation"] { animation: none !important; }
+    [style*="transition"] { transition: none !important; }
+  </style>
   <!-- GLOBAL HEADER -->
   <div data-include="/header-en.html"></div>
 
