--- a/gizlilik-sozlesmesi.html
+++ b/gizlilik-sozlesmesi.html
@@ -109,12 +109,13 @@
 
   <style>
     /* Отключаем все анимации и переходы на этой странице */
-    *, *::before, *::after {
-      animation: none !important;
-      transition: none !important;
-      scroll-behavior: auto !important;
-    }
-    [style*="transform"] { transform: none !important; }
+    * { animation: none !important; transition: none !important; }
+    *::before, *::after { animation: none !important; transition: none !important; }
+    body { scroll-behavior: auto !important; }
+    .voice-bar { animation: none !important; }
+    .voice-stop-btn { animation: none !important; }
+    [style*="animation"] { animation: none !important; }
+    [style*="transition"] { transition: none !important; }
   </style>
 
   <div data-include="/header-tr.html"></div>
