--- a/analyze.html
+++ b/analyze.html
@@ -75,12 +75,13 @@
 
     <style>
         /* Disable animations/transitions on this analysis page */
-        *, *::before, *::after {
-            animation: none !important;
-            transition: none !important;
-            scroll-behavior: auto !important;
-        }
-        /* Prevent hover transforms */
+        * { animation: none !important; transition: none !important; }
+        *::before, *::after { animation: none !important; transition: none !important; }
+        body { scroll-behavior: auto !important; }
+        .voice-bar { animation: none !important; }
+        .voice-stop-btn { animation: none !important; }
+        [style*="animation"] { animation: none !important; }
+        [style*="transition"] { transition: none !important; }
         .alba-card, .alba-card * { transform: none !important; }
     </style>
 
