--- a/eng/atlas.html
+++ b/eng/atlas.html
@@ -226,14 +226,11 @@ section.grid {
           <div class="atlas-hero-label">ALBASPACE</div>
           <h1 class="atlas-hero-title">Interactive Space Atlas</h1>
           <p class="atlas-hero-sub">
-            A 3D gallery of Turkish satellites, planets and Mars exploration missions.
+            A 3D gallery of Turkish satellites, planets and Mars exploration missions. Explore Turkish satellites, planets and Mars rovers in the Alba Space collection.
+          Each card opens a dedicated 3D page for the object.
           </p>
         </section>
 
-        <p class="atlas-intro">
-          Explore Turkish satellites, planets and Mars rovers in the Alba Space collection.
-          Each card opens a dedicated 3D page for the object.
-        </p>
 
         <!-- FIXED: added data-filter + accessibility -->
         <div class="filters" aria-label="Categories">
