--- a/eng/footer-en.html
+++ b/eng/footer-en.html
@@ -56,6 +56,17 @@
       </a>
     </div>
   </div>
+
+  <!-- === ИЗМЕНЕННЫЙ БЛОК === -->
+  <div class="footer-bottom">
+    <div class="footer-legal-links">
+      <a href="/eng/teslimat-ve-iade-sartlari.html">Delivery and Return Terms</a>
+      <a href="/eng/gizlilik-sozlesmesi.html">Privacy Policy</a>
+    </div>
+  </div>
+  <!-- === КОНЕЦ ИЗМЕНЕННОГО БЛОКА === -->
+
+
   <div class="footer-bottom">
     <p>© AlbaSpace 2026</p>
   </div>
