--- a/eng/gizlilik-sozlesmesi.html
+++ b/eng/gizlilik-sozlesmesi.html
@@ -125,7 +125,7 @@
       <h1>Privacy Agreement and Personal Data Protection Policy</h1>
 
       <h2>1. Data Controller</h2>
-      <p>In accordance with the Personal Data Protection Law No. 6698 (KVKK), your personal data is processed by <strong>[Your Company's Full Legal Name]</strong> ("ALBA Space") as the data controller within the scope explained below. This policy is prepared to fulfill our enlightenment obligation under KVKK.</p>
+      <p>In accordance with the Personal Data Protection Law No. 6698 (KVKK), your personal data is processed by <strong>ALBA Space</strong> as the data controller within the scope explained below. This policy is prepared to fulfill our enlightenment obligation under KVKK.</p>
       <ul>
         <li><strong>Address:</strong> Çukurova Üniversitesi Teknokent No:B207 Sarıçam / ADANA</li>
         <li><strong>E-mail:</strong> hello@albaspace.com.tr</li>
