--- a/eng/basindabiz.html
+++ b/eng/basindabiz.html
@@ -102,11 +102,9 @@
         0 0 40px rgba(0,194,255,0.35);
       overflow:hidden;
       backdrop-filter:blur(8px);
-      transition:transform .18s ease-out, box-shadow .18s ease-out, border-color .18s ease-out;
     }
 
     .video-card:hover{
-      transform:translateY(-4px);
       border-color:rgba(56,189,248,0.9);
       box-shadow:
         0 0 34px rgba(0,194,255,0.55),
@@ -168,9 +166,121 @@
     /* Быстрая анимация для первого блока */
     .page-wrapper {
       --reveal-delay: 0s !important;
-      transition-duration: 0.3s !important;
+    }
+
+    /* Отключить reveal анимации */
+    .reveal {
+      opacity: 1 !important;
+      transform: none !important;
+      filter: none !important;
+      transition: none !important;
+    }
+  
+/* === COOKIE POPUP STYLES === */
+    /* ========================================= */
+    #cookie-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        z-index: 9999; /* En üstte durması için */
+        display: none; /* JS ile açılacak */
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .cookie-modal {
+        background-color: #ffffff;
+        color: #000000;
+        width: 100%;
+        max-width: 500px;
+        padding: 40px 30px;
+        box-sizing: border-box;
+        text-align: center;
+        position: relative;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        border-radius: 4px; /* Hafif yumuşatma */
+    }
+
+    .cookie-header {
+        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 20px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+    }
+
+    .cookie-text {
+        font-size: 13px;
+        line-height: 1.5;
+        color: #333;
+        margin-bottom: 20px;
+        text-align: left;
+    }
+
+    .cookie-link {
+        display: block;
+        margin-bottom: 25px;
+        font-size: 13px;
+        text-decoration: underline;
+        color: #000;
+        cursor: pointer;
+    }
+
+    .cookie-buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .btn-cookie {
+        width: 100%;
+        padding: 15px;
+        font-size: 14px;
+        font-weight: bold;
+        text-transform: uppercase;
+        cursor: pointer;
+        border: 1px solid #000;
+        transition: transform 0.1s ease, opacity 0.2s;
+    }
+
+    /* Üst buton (Siyah) */
+    .btn-accept {
+        background-color: #000;
+        color: #fff;
+    }
+
+    /* Alt buton (Beyaz) */
+    .btn-settings {
+        background-color: #fff;
+        color: #000;
+    }
+
+    .btn-cookie:active {
+        transform: scale(0.96);
+    }
+    
+    @media (max-width: 600px) {
+        .cookie-modal { padding: 20px; }
     }
   </style>
+</head>
+
+<body class="home-page">
+  <div data-include="/header-en.html"></div>
+
+  <main class="home-main">
+
+    <!-- HERO -->
+    <section class="hero">
+      <div class="glass-box">
+        <h1>Take Your Future to Space!</h1>
+        <p class="lead">
+          We send your brand to space! We offer your brand a unique and unforgettable experience with o
+</style>
 
   <link rel="stylesheet" href="/assets/css/site.css" />
   <script src="/assets/js/include.js" defer></script>
@@ -551,6 +661,39 @@
         sorted.forEach(card => grid.appendChild(card));
       });
     });
+  </script>
+<div id="cookie-overlay">
+      <div class="cookie-modal">
+          <div class="cookie-header">BEFORE YOU START SHOPPING</div>
+      // Sayfa Yüklendiğinde Popup Kontrolü
+      document.addEventListener("DOMContentLoaded", function() {
+          // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
+          if (!localStorage.getItem("albaCookieSeen")) {
+              document.getElementById("cookie-overlay").style.display = "flex";
+          }
+      });
+
+      const acceptBtn = document.getElementById("btnAccept");
+      const settingsBtn = document.getElementById("btnSettings");
+
+      // Üst buton: Animasyon ve Kapatma
+      if(acceptBtn) {
+          acceptBtn.addEventListener("click", function() {
+              // Butona basıldığını hissettirmek için ufak bir bekleme (opsiyonel)
+              setTimeout(() => {
+                  document.getElementById("cookie-overlay").style.display = "none";
+                  // Kullanıcının gördüğünü tarayıcıya kaydet
+                  localStorage.setItem("albaCookieSeen", "true");
+              }, 200);
+          });
+      }
+
+      // Alt buton: Çerez politikası sayfasına yönlendirir
+      if(settingsBtn) {
+          settingsBtn.addEventListener("click", function() {
+               window.location.href = "cerez-politikasi.html";
+          });
+      }
   </script>
 </body>
 </html>
