--- a/eng/index.html
+++ b/eng/index.html
@@ -303,6 +303,98 @@
       -webkit-backdrop-filter: none;
       backdrop-filter: none;
     }
+
+    /* ========================================= */
+    /* === COOKIE POPUP STYLES === */
+    /* ========================================= */
+    #cookie-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        z-index: 9999; /* En üstte durması için */
+        display: none; /* JS ile açılacak */
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .cookie-modal {
+        background-color: #ffffff;
+        color: #000000;
+        width: 100%;
+        max-width: 500px;
+        padding: 40px 30px;
+        box-sizing: border-box;
+        text-align: center;
+        position: relative;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        border-radius: 4px; /* Hafif yumuşatma */
+    }
+
+    .cookie-header {
+        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 20px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+    }
+
+    .cookie-text {
+        font-size: 13px;
+        line-height: 1.5;
+        color: #333;
+        margin-bottom: 20px;
+        text-align: left;
+    }
+
+    .cookie-link {
+        display: block;
+        margin-bottom: 25px;
+        font-size: 13px;
+        text-decoration: underline;
+        color: #000;
+        cursor: pointer;
+    }
+
+    .cookie-buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .btn-cookie {
+        width: 100%;
+        padding: 15px;
+        font-size: 14px;
+        font-weight: bold;
+        text-transform: uppercase;
+        cursor: pointer;
+        border: 1px solid #000;
+        transition: transform 0.1s ease, opacity 0.2s;
+    }
+
+    /* Üst buton (Siyah) */
+    .btn-accept {
+        background-color: #000;
+        color: #fff;
+    }
+
+    /* Alt buton (Beyaz) */
+    .btn-settings {
+        background-color: #fff;
+        color: #000;
+    }
+
+    .btn-cookie:active {
+        transform: scale(0.96);
+    }
+    
+    @media (max-width: 600px) {
+        .cookie-modal { padding: 20px; }
+    }
   </style>
 </head>
 
@@ -450,5 +542,54 @@
   </main>
 
   <div data-include="/footer-en.html"></div>
+
+  <div id="cookie-overlay">
+      <div class="cookie-modal">
+          <div class="cookie-header">BEFORE YOU START SHOPPING</div>
+          <div class="cookie-text">
+              To ensure full functionality of our website, personalize your user experience, perform analytics, and deliver personalized ads on our websites, apps, and newsletters through the internet and social media platforms, we use first and third-party cookies, including other tracking technologies from third-party publishers. For this purpose, we collect information about users, browsing patterns, and devices.<br><br>
+              By clicking "Accept All Cookies", you agree and consent to us sharing this information with third parties such as advertising partners. When "Only Necessary Cookies" is selected, optional cookies are blocked, limiting our ability to provide special content and features. Click "Cookie Settings" to customize your options. Visit our Cookie Policy for more information.
+          </div>
+          <a href="cerez-politikasi.html" class="cookie-link">Cookie Policy</a>
+          <div class="cookie-buttons">
+              <button class="btn-cookie btn-accept" id="btnAccept">ACCEPT ALL COOKIES</button>
+              <button class="btn-cookie btn-settings" id="btnSettings">COOKIE SETTINGS</button>
+          </div>
+      </div>
+  </div>
+
+  <script>
+      // Sayfa Yüklendiğinde Popup Kontrolü
+      document.addEventListener("DOMContentLoaded", function() {
+          // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
+          if (!localStorage.getItem("albaCookieSeen")) {
+              document.getElementById("cookie-overlay").style.display = "flex";
+          }
+      });
+
+      const acceptBtn = document.getElementById("btnAccept");
+      const settingsBtn = document.getElementById("btnSettings");
+
+      // Üst buton: Animasyon ve Kapatma
+      if(acceptBtn) {
+          acceptBtn.addEventListener("click", function() {
+              // Butona basıldığını hissettirmek için ufak bir bekleme (opsiyonel)
+              setTimeout(() => {
+                  document.getElementById("cookie-overlay").style.display = "none";
+                  // Kullanıcının gördüğünü tarayıcıya kaydet
+                  localStorage.setItem("albaCookieSeen", "true");
+              }, 200);
+          });
+      }
+
+      // Alt buton: Çerez politikası sayfasına yönlendirir
+      if(settingsBtn) {
+          settingsBtn.addEventListener("click", function() {
+               window.location.href = "cerez-politikasi.html";
+          });
+      }
+  </script>
+
 </body>
 </html>
+  <script>
