--- a/gizlilik-sozlesmesi.html
+++ b/gizlilik-sozlesmesi.html
@@ -103,7 +103,112 @@
       h1 { font-size: 28px; }
       h2 { font-size: 20px; }
     }
+  
+/* === YENİ EKLENEN: COOKIE POPUP STİLLERİ === */
+    /* ========================================= */
+    #cookie-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        z-index: 9999; /* En üstte durması için */
+        display: none; /* JS ile açılacak */
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .cookie-modal {
+        background-color: #ffffff;
+        color: #000000;
+        width: 100%;
+        max-width: 500px;
+        padding: 40px 30px;
+        box-sizing: border-box;
+        text-align: center;
+        position: relative;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        border-radius: 4px; /* Hafif yumuşatma */
+    }
+
+    .cookie-header {
+        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 20px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+    }
+
+    .cookie-text {
+        font-size: 13px;
+        line-height: 1.5;
+        color: #333;
+        margin-bottom: 20px;
+        text-align: left;
+    }
+
+    .cookie-link {
+        display: block;
+        margin-bottom: 25px;
+        font-size: 13px;
+        text-decoration: underline;
+        color: #000;
+        cursor: pointer;
+    }
+
+    .cookie-buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .btn-cookie {
+        width: 100%;
+        padding: 15px;
+        font-size: 14px;
+        font-weight: bold;
+        text-transform: uppercase;
+        cursor: pointer;
+        border: 1px solid #000;
+        transition: transform 0.1s ease, opacity 0.2s;
+    }
+
+    /* Üst buton (Siyah) */
+    .btn-accept {
+        background-color: #000;
+        color: #fff;
+    }
+
+    /* Alt buton (Beyaz) */
+    .btn-settings {
+        background-color: #fff;
+        color: #000;
+    }
+
+    .btn-cookie:active {
+        transform: scale(0.96);
+    }
+    
+    @media (max-width: 600px) {
+        .cookie-modal { padding: 20px; }
+    }
   </style>
+</head>
+
+<body class="home-page">
+  <div data-include="/header-tr.html"></div>
+
+  <main class="home-main">
+
+    <section class="hero">
+      <div class="glass-box reveal" data-direction="left">
+        <h1>Geleceğinizi Uzaya Taşıyın!</h1>
+        <p class="lead">
+          Markanızı uzaya gönderiyoruz! Uzay temalı reklam ve eğitim çözümlerimizle,
+          markanıza be
+</style>
 </head>
 <body>
 
@@ -205,5 +310,60 @@
 
   <div data-include="/footer-tr.html"></div>
 
+<div id="cookie-overlay">
+      <div class="cookie-modal">
+          <div class="cookie-header">ALIŞVERİŞE BAŞLAMADAN ÖNCE</div>
+    const revealItems = document.querySelectorAll('.reveal');
+
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('is-visible');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, {
+      threshold: 0.18,
+      rootMargin: '0px 0px -8% 0px'
+    });
+
+    revealItems.forEach((item, index) => {
+      const delay = item.dataset.direction === 'left' ? index * 0.025 : index * 0.03;
+      item.style.setProperty('--reveal-delay', `${delay}s`);
+      observer.observe(item);
+    });
+  </script>
+
+  <script>
+      // Sayfa Yüklendiğinde Popup Kontrolü
+      document.addEventListener("DOMContentLoaded", function() {
+          // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
+          if (!localStorage.getItem("albaCookieSeen")) {
+              document.getElementById("cookie-overlay").style.display = "flex";
+          }
+      });
+
+      const acceptBtn = document.getElementById("btnAccept");
+      const settingsBtn = document.getElementById("btnSettings");
+
+      // Üst buton: Animasyon ve Kapatma
+      if(acceptBtn) {
+          acceptBtn.addEventListener("click", function() {
+              // Butona basıldığını hissettirmek için ufak bir bekleme (opsiyonel)
+              setTimeout(() => {
+                  document.getElementById("cookie-overlay").style.display = "none";
+                  // Kullanıcının gördüğünü tarayıcıya kaydet
+                  localStorage.setItem("albaCookieSeen", "true");
+              }, 200);
+          });
+      }
+
+      // Alt buton: Çerez politikası sayfasına yönlendirir
+      if(settingsBtn) {
+          settingsBtn.addEventListener("click", function() {
+               window.location.href = "cerez-politikasi.html";
+          });
+      }
+  </script>
 </body>
 </html>
