--- a/albamen.html
+++ b/albamen.html
@@ -1098,7 +1098,8 @@
         });
       });
     </script>
-  
+
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
