--- a/atlas.html
+++ b/atlas.html
@@ -321,8 +321,7 @@
     });
   </script>
 
-
-
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
