--- a/blog.html
+++ b/blog.html
@@ -188,6 +188,7 @@ footer.footer{
 
   <div data-include="/footer-tr.html"></div>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
