--- a/cart.html
+++ b/cart.html
@@ -235,7 +235,7 @@
     document.addEventListener('DOMContentLoaded', renderCartTR);
   </script>
 
-
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
