--- a/eng/albamen.html
+++ b/eng/albamen.html
@@ -1042,7 +1042,8 @@
       if(modalClose) modalClose.addEventListener('click', closeModal);
       if(modal) modal.addEventListener('click', (e) => { if(e.target === modal) closeModal(); });
     </script>
-  
+
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
