--- a/eng/atlas.html
+++ b/eng/atlas.html
@@ -510,6 +510,7 @@ section.grid {
     });
   </script>
 
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
