--- a/eng/cart.html
+++ b/eng/cart.html
@@ -228,7 +228,7 @@
     document.addEventListener('DOMContentLoaded', renderCartEN);
   </script>
 
-
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
