--- a/eng/product-shirt.html
+++ b/eng/product-shirt.html
@@ -127,6 +127,7 @@
     });
   </script>
 
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
