--- a/kupsat.html
+++ b/kupsat.html
@@ -136,7 +136,7 @@
   <!-- Footer included via JS -->
   <div data-include="/footer-tr.html"></div>
 
-
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
