--- a/product-dragon.html
+++ b/product-dragon.html
@@ -131,6 +131,7 @@
     });
   </script>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
