--- a/shop.html
+++ b/shop.html
@@ -173,6 +173,7 @@
   <!-- Dinamik footer dahil etme -->
   <div data-include="/footer-tr.html"></div>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
