--- a/turkflag.html
+++ b/turkflag.html
@@ -309,6 +309,7 @@
     updateActiveNav('legend');
   </script>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
