--- a/analyze.html
+++ b/analyze.html
@@ -520,6 +520,7 @@
         });
     </script>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
