--- a/galeri.html
+++ b/galeri.html
@@ -425,6 +425,7 @@
 
   <div data-include="/footer-tr.html"></div>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
