--- a/gizlilik-sozlesmesi.html
+++ b/gizlilik-sozlesmesi.html
@@ -207,7 +207,7 @@
 
   <div data-include="/footer-tr.html"></div>
 
-
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
