--- a/hizmetler.html
+++ b/hizmetler.html
@@ -263,6 +263,7 @@
     });
   </script>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
