--- a/iletisim.html
+++ b/iletisim.html
@@ -453,6 +453,7 @@ footer.footer{
 
   <div data-include="/footer-tr.html"></div>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
