--- a/jidoka-etkinlik.html
+++ b/jidoka-etkinlik.html
@@ -74,6 +74,7 @@
 
   <div data-include="/footer-tr.html"></div>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
