--- a/product-albamenvelara1.html
+++ b/product-albamenvelara1.html
@@ -130,6 +130,7 @@
     });
   </script>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
