--- a/product-hat.html
+++ b/product-hat.html
@@ -125,6 +125,7 @@
     });
   </script>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
