--- a/product-shirt.html
+++ b/product-shirt.html
@@ -127,6 +127,7 @@
     });
   </script>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
