--- a/rings.html
+++ b/rings.html
@@ -255,6 +255,7 @@
         });
     </script>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
