--- a/stratosfer-reklam-bilim.html
+++ b/stratosfer-reklam-bilim.html
@@ -79,6 +79,7 @@
 
   <div data-include="/footer-tr.html"></div>
 
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
