--- a/Çerez.html
+++ b/Çerez.html
@@ -265,7 +265,7 @@
 
 </div>
 
-
+  <script>
     const revealItems = document.querySelectorAll('.reveal');
 
     const observer = new IntersectionObserver((entries, obs) => {
@@ -288,6 +288,6 @@
   </script>
 
   <script>
-</script>
+  </script>
 </body>
 </html>
