--- a/eng/anasayfa.html
+++ b/eng/anasayfa.html
@@ -278,6 +278,7 @@ body {
 
   <div data-include="/footer-en.html"></div>
 
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
