--- a/eng/blog.html
+++ b/eng/blog.html
@@ -32,7 +32,9 @@
               <button class="btn-cookie btn-settings" id="btnSettings">COOKIE SETTINGS</button>
           </div>
       </div>
-  </div> Popup Kontrolü
+
+  <script>
+      // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
           if (!localStorage.getItem("albaCookieSeen")) {
