--- a/eng/hakkimizda.html
+++ b/eng/hakkimizda.html
@@ -232,6 +232,9 @@ S
               <button class="btn-cookie btn-settings" id="btnSettings">COOKIE SETTINGS</button>
           </div>
       </div>
+
+  <script>
+      // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
           if (!localStorage.getItem("albaCookieSeen")) {
