--- a/eng/galeri.html
+++ b/eng/galeri.html
@@ -567,6 +567,7 @@
 
   <div data-include="/footer-en.html"></div>
 
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
