--- a/eng/iletisim.html
+++ b/eng/iletisim.html
@@ -453,6 +453,7 @@ footer.footer{
 
   <div data-include="/footer-en.html"></div>
 
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
