--- a/eng/kupsat.html
+++ b/eng/kupsat.html
@@ -134,7 +134,7 @@
   <!-- Footer included via JS -->
   <div data-include="/footer-en.html"></div>
 
-
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
