--- a/eng/Çerez.html
+++ b/eng/Çerez.html
@@ -265,7 +265,7 @@
 
 </div>
 
-
+  <script>
       // Sayfa Yüklendiğinde Popup Kontrolü
       document.addEventListener("DOMContentLoaded", function() {
           // localStorage kontrolü: Kullanıcı daha önce "kabul ettim" dedi mi?
